# ArduinoHDLC_RS485

./: .gitignore  README.md  platformio.ini
docs/: API_REFERENCE.md
examples/: basic_usage.cpp
include/: ArduinoPinInterface.h  HDLC.h  IPinInterface.h  MockPinInterface.h  RS485Driver.h
src/: HDLC.cpp  RS485Driver.cpp  main.cpp
test/: CMakeLists.txt  main.cpp  test_main.cpp  unity_config.h
